--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,13 @@
     "angular-ui-router": "~0.2.13",
     "bootstrap": "~3.3.1",
     "angular-bootstrap": "~0.12.0",
-    "angular": "~1.3.4"
+    "angular": "~1.3.4",
+    "angular-google-maps": "~2.1.1",
+    "fontawesome": "~4.3.0",
+    "ionicons": "~2.0.1",
+    "angular-ui-select2": "~0.0.5",
+    "ng-file-upload": "~4.2.4",
+    "ng-file-upload-shim": "~4.2.4"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.4"
