--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,8 @@
     "ionicons": "~2.0.1",
     "angular-ui-select2": "~0.0.5",
     "ng-file-upload": "~4.2.4",
-    "ng-file-upload-shim": "~4.2.4"
+    "ng-file-upload-shim": "~4.2.4",
+    "angular-local-storage": "~0.2.2"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.4"
