--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,8 @@
     "ng-file-upload": "~4.2.4",
     "ng-file-upload-shim": "~4.2.4",
     "angular-local-storage": "~0.2.2",
-    "underscore": "~1.8.3"
+    "underscore": "~1.8.3",
+    "jquery-zoom": "~1.7.14"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.4"
