--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,12 @@
     "ng-file-upload-shim": "~4.2.4",
     "angular-local-storage": "~0.2.2",
     "underscore": "~1.8.3",
-    "jquery-zoom": "~1.7.14"
+    "jquery-zoom": "~1.7.14",
+    "angular-dynamic-locale": "~0.1.27",
+    "angular-translate": "~2.7.2",
+    "angular-i18n": "~1.4.3",
+    "angular-translate-loader-static-files": "~2.7.2",
+    "valdr": "~1.1.4"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.4"
