--- a/bower.json
+++ b/bower.json
@@ -24,7 +24,9 @@
     "angular-translate": "~2.7.2",
     "angular-i18n": "~1.4.3",
     "angular-translate-loader-static-files": "~2.7.2",
-    "valdr": "~1.1.4"
+    "valdr": "~1.1.4",
+    "angular-raven": "~0.5.11",
+    "raven-js": "~1.2.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.4"
