--- a/bower.json
+++ b/bower.json
@@ -26,7 +26,10 @@
     "angular-translate-loader-static-files": "~2.7.2",
     "valdr": "~1.1.4",
     "angular-raven": "~0.5.11",
-    "raven-js": "~1.2.0"
+    "raven-js": "~1.2.0",
+    "pouchdb": "~5.0.0",
+    "angular-pouchdb": "~4.0.0",
+    "lodash": "~3.10.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.4"
