--- a/bower.json
+++ b/bower.json
@@ -27,11 +27,10 @@
     "valdr": "~1.1.4",
     "angular-raven": "~0.5.11",
     "raven-js": "~1.2.0",
-    "pouchdb": "~5.0.0",
-    "angular-pouchdb": "~4.0.0",
     "lodash": "~3.10.1",
     "angular-input-masks": "~2.1.0",
-    "angular-ui-mask": "~1.5.1"
+    "angular-ui-mask": "~1.5.1",
+    "angular-datepicker": "~2.0.3"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.4"
