--- a/bower.json
+++ b/bower.json
@@ -30,7 +30,8 @@
     "lodash": "~3.10.1",
     "angular-input-masks": "~2.1.0",
     "angular-ui-mask": "~1.5.1",
-    "angular-datepicker": "~2.0.3"
+    "angular-datepicker": "~2.0.3",
+    "ngInfiniteScroll": "~1.2.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.4"
