--- a/bower.json
+++ b/bower.json
@@ -31,7 +31,8 @@
     "angular-input-masks": "~2.1.0",
     "angular-ui-mask": "~1.5.1",
     "angular-datepicker": "~2.0.3",
-    "ngInfiniteScroll": "~1.2.1"
+    "ngInfiniteScroll": "~1.2.1",
+    "angular-toastr": "~1.6.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.4"
