--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "heavyMetals",
   "version": "0.0.0",
-  "dependencies": {},
+  "dependencies": {
+    "gulp-exec": "^2.1.2",
+    "gulp-scp2": "^0.2.0"
+  },
   "scripts": {
     "test": "gulp test"
   },
