--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "heavyMetals",
   "version": "0.0.0",
   "dependencies": {
-    "angular-animate": "~1.3.4",
+    "angular-animate": "1.4.3",
     "angular-cookies": "~1.3.4",
     "angular-touch": "~1.3.4",
     "angular-sanitize": "~1.3.4",
@@ -10,7 +10,7 @@
     "angular-ui-router": "~0.2.13",
     "bootstrap": "~3.3.1",
     "angular-bootstrap": "~0.14.3",
-    "angular": "~1.3.4",
+    "angular": "1.4.3",
     "angular-google-maps": "~2.1.1",
     "fontawesome": "~4.3.0",
     "ionicons": "~2.0.1",
