--- a/bower.json
+++ b/bower.json
@@ -32,7 +32,9 @@
     "angular-ui-mask": "~1.5.1",
     "angular-datepicker": "~2.0.3",
     "ngInfiniteScroll": "~1.2.1",
-    "angular-toastr": "~1.6.0"
+    "angular-toastr": "~1.6.0",
+    "angular-card": "~0.3.5",
+    "card": "https://github.com/jessepollak/card.git#~1.2.2"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.4"
