--- a/bower.json
+++ b/bower.json
@@ -34,7 +34,8 @@
     "ngInfiniteScroll": "~1.2.1",
     "angular-toastr": "~1.6.0",
     "angular-card": "~0.3.5",
-    "card": "https://github.com/jessepollak/card.git#~1.2.2"
+    "card": "https://github.com/jessepollak/card.git#~1.2.2",
+    "bootstrap-ui-datetime-picker": "~2.0.5"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.4"
