--- a/bower.json
+++ b/bower.json
@@ -35,7 +35,10 @@
     "angular-toastr": "~1.6.0",
     "angular-card": "~0.3.5",
     "card": "https://github.com/jessepollak/card.git#~1.2.2",
-    "bootstrap-ui-datetime-picker": "~2.0.5"
+    "bootstrap-ui-datetime-picker": "~2.0.5",
+    "angular-moment": "~0.10.3",
+    "moment": "~2.11.1",
+    "humanize-duration": "~3.5.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.4"
