--- a/bower.json
+++ b/bower.json
@@ -34,7 +34,7 @@
     "angular-toastr": "~1.6.0",
     "angular-card": "~0.3.5",
     "card": "https://github.com/jessepollak/card.git#~1.2.2",
-    "angular-moment": "~0.10.3",
+    "angular-moment": "1.0.0-beta.3",
     "moment": "~2.11.1",
     "humanize-duration": "~3.5.0"
   },
