--- a/bower.json
+++ b/bower.json
@@ -33,8 +33,7 @@
     "card": "https://github.com/jessepollak/card.git#~1.2.2",
     "angular-moment": "1.0.0-beta.3",
     "moment": "~2.11.1",
-    "humanize-duration": "~3.5.0",
-    "angular-click-outside": "~2.2.1"
+    "humanize-duration": "~3.5.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.4"
