--- a/bower.json
+++ b/bower.json
@@ -34,7 +34,8 @@
     "angular-moment": "1.0.0-beta.3",
     "moment": "~2.11.1",
     "humanize-duration": "~3.5.0",
-    "angular-morph": "0.1.0"
+    "angular-morph": "0.1.0",
+    "smoothscroll": "~0.1.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.4"
