--- a/bower.json
+++ b/bower.json
@@ -35,7 +35,8 @@
     "moment": "~2.11.1",
     "humanize-duration": "~3.5.0",
     "angular-morph": "0.1.0",
-    "smoothscroll": "~0.1.0"
+    "smoothscroll": "~0.1.0",
+    "angular-busy": "~4.1.3"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.4"
