--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,7 @@
     "jquery": "~2.1.1",
     "angular-ui-router": "~0.2.13",
     "bootstrap": "~3.3.1",
-    "angular-bootstrap": "~0.14.3",
+    "angular-bootstrap": "1.1.2",
     "angular": "1.4.3",
     "angular-google-maps": "~2.1.1",
     "fontawesome": "~4.3.0",
