--- a/bower.json
+++ b/bower.json
@@ -3,46 +3,37 @@
   "version": "0.0.0",
   "dependencies": {
     "angular-animate": "1.4.3",
-    "angular-sanitize": "~1.3.4",
-    "jquery": "~2.1.1",
-    "angular-ui-router": "~0.2.13",
+    "angular-sanitize": "1.3.20",
+    "jquery": "2.1.4",
+    "angular-ui-router": "0.2.15",
     "bootstrap": "~3.3.1",
     "angular-bootstrap": "1.1.2",
     "angular": "1.4.9",
-    "angular-google-maps": "~2.1.1",
-    "fontawesome": "~4.3.0",
-    "ionicons": "~2.0.1",
-    "angular-ui-select2": "~0.0.5",
-    "ng-file-upload": "~4.2.4",
-    "ng-file-upload-shim": "~4.2.4",
-    "angular-local-storage": "~0.2.2",
-    "underscore": "~1.8.3",
-    "jquery-zoom": "~1.7.14",
-    "angular-dynamic-locale": "~0.1.27",
-    "angular-translate": "~2.7.2",
-    "angular-i18n": "~1.4.3",
-    "angular-translate-loader-static-files": "~2.7.2",
-    "valdr": "~1.1.4",
-    "angular-raven": "~0.5.11",
-    "raven-js": "~1.2.0",
-    "lodash": "~3.10.1",
-    "angular-ui-mask": "~1.5.1",
-    "ngInfiniteScroll": "~1.2.1",
-    "angular-toastr": "~1.6.0",
-    "angular-card": "~0.3.5",
-    "card": "https://github.com/jessepollak/card.git#~1.2.2",
+    "angular-google-maps": "2.1.6",
+    "fontawesome": "4.3.0",
+    "ionicons": "2.0.0",
+    "ng-file-upload": "4.2.4",
+    "ng-file-upload-shim": "4.2.4",
+    "angular-local-storage": "0.2.3",
+    "jquery-zoom": "1.7.14",
+    "angular-dynamic-locale": "0.1.29",
+    "angular-translate": "2.7.2",
+    "angular-i18n": "1.4.9",
+    "angular-translate-loader-static-files": "2.7.2",
+    "valdr": "1.1.5",
+    "angular-raven": "0.5.11",
+    "raven-js": "1.2.0",
+    "lodash": "3.10.1",
+    "angular-ui-mask": "1.5.1",
+    "ngInfiniteScroll": "1.2.0",
+    "angular-toastr": "1.6.0",
+    "angular-card": "0.3.5",
+    "card": "https://github.com/jessepollak/card.git#1.2.2",
     "angular-moment": "1.0.0-beta.3",
-    "moment": "~2.11.1",
-    "humanize-duration": "~3.5.0",
+    "moment": "2.10.6",
+    "humanize-duration": "3.5.0",
     "angular-morph": "0.1.0",
-    "smoothscroll": "~0.1.0",
-    "angular-busy": "~4.1.3"
-  },
-  "devDependencies": {
-    "angular-mocks": "~1.3.4"
-  },
-  "resolutions": {
-    "jquery": "~2.1.1",
-    "angular": "1.4.2"
+    "smoothscroll": "0.1.0",
+    "angular-busy": "4.1.3"
   }
 }
