--- a/bower.json
+++ b/bower.json
@@ -34,6 +34,7 @@
     "humanize-duration": "3.5.0",
     "angular-morph": "0.1.0",
     "smoothscroll": "0.1.0",
-    "angular-busy": "4.1.3"
+    "angular-busy": "4.1.3",
+    "ngSmoothScroll" : "2.0.0"
   }
 }
