--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,7 @@
     "angular-sanitize": "1.3.20",
     "jquery": "2.1.4",
     "angular-ui-router": "0.2.15",
-    "bootstrap": "~3.3.1",
+    "bootstrap": "3.3.6",
     "angular-bootstrap": "1.1.2",
     "angular": "1.4.9",
     "angular-google-maps": "2.1.6",
@@ -32,7 +32,6 @@
     "angular-moment": "1.0.0-beta.3",
     "moment": "2.10.6",
     "humanize-duration": "3.5.0",
-    "angular-morph": "0.1.0",
     "smoothscroll": "0.1.0",
     "angular-busy": "4.1.3",
     "ngSmoothScroll" : "2.0.0"
